--- a/explore.html
+++ b/explore.html
@@ -1,157 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PrintMoney - IPO Information</title>
-  <link rel="stylesheet" href="styles_explore.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PrintMoney - IPO Information</title>
+    <link rel="stylesheet" href="styles_explore.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <div class="logo" unselectable="on"><a href="index.html">PrintMoney</a></div>
-            <ul class="nav-links">
-            <li><a href="#">Upcoming IPOs</a></li>
-            <li><a href="#">IPO Calendar</a></li>
-            <li><a href="#">IPO Analysis</a></li>
-            <li><a href="#">Market Trends</a></li>
-            <li><a href="#" class="cta-btn">Get Started</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <div class="logo" unselectable="on">
+          <a href="index.html">PrintMoney</a>
+        </div>
+        <ul class="nav-links">
+          <li><a href="#">Upcoming IPOs</a></li>
+          <li><a href="#">IPO Calendar</a></li>
+          <li><a href="#">IPO Analysis</a></li>
+          <li><a href="#">Market Trends</a></li>
+          <li><a href="#" class="cta-btn">Get Started</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section class="ipo-data">
-        <h2>Latest IPO Data</h2>
+      <center><h2>Latest IPO Data</h2></center>
 
-        <!-- Table to display IPO data -->
-        <table id="ipo-table">
-            <thead>
-                <tr>
-                    <th>IPO Name</th>
-                    <th>Status</th>
-                    <th>Price</th>
-                    <th>GMP(₹)</th>
-                    <th>Est Listing</th>
-                    <!-- <th>Rating</th> -->
-                    <th>IPO Size</th>
-                    <th>Lot Size</th>
-                    <th>Open Date</th>
-                    <th>Close Date</th>
-                    <th>BoA Dt</th>
-                    <th>Listing</th>
-                    <th>GMP Updated</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Data will be inserted here dynamically -->
-            </tbody>
-        </table>
-    </section>    
+      <!-- Table to display IPO data -->
+      <table id="ipo-table">
+        <thead>
+          <tr>
+            <th>IPO Name</th>
+            <th>Status</th>
+            <th>Price</th>
+            <th>GMP(₹)</th>
+            <th>Est Listing</th>
+            <!-- <th>Rating</th> -->
+            <th>IPO Size</th>
+            <th>Lot Size</th>
+            <th>Open Date</th>
+            <th>Close Date</th>
+            <th> BoA Dt </th>
+            <th>Listing</th>
+            <th>GMP Updated</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Data will be inserted here dynamically -->
+        </tbody>
+      </table>
+    </section>
+    <br><br>
 
-  <footer>
-    <div class="footer-container">
-      <!-- Quick Links -->
-      <div class="footer-links">
-        <h4>Quick Links</h4>
-        <a href="index.html">Home</a> | 
-        <a href="#">Upcoming IPOs</a> | 
-        <a href="#">IPO Calendar</a> | 
-        <a href="#">Contact Us</a> | 
-        <a href="#">About Us</a>
+    <footer>
+      <div class="footer-container">
+        <!-- Quick Links -->
+        <div class="footer-links">
+          <h4>Quick Links</h4>
+          <a href="index.html">Home</a> | <a href="#">Upcoming IPOs</a> |
+          <a href="#">IPO Calendar</a> | <a href="#">Contact Us</a> |
+          <a href="#">About Us</a>
+        </div>
+
+        <!-- Contact Information -->
+        <div class="contact-info">
+          <h4>Contact Us</h4>
+          <p>
+            Email:
+            <a href="mailto:support@printmoney.com">support@printmoney.com</a>
+          </p>
+          <p>Phone: +1-234-567-890</p>
+        </div>
+
+        <!-- Social Media Links -->
+        <div class="social-links">
+          <h4>Follow Us</h4>
+          <a href="#"><img src="twitter-icon.png" alt="Twitter" /></a>
+          <a href="#"><img src="linkedin-icon.png" alt="LinkedIn" /></a>
+          <a href="#"><img src="instagram-icon.png" alt="Instagram" /></a>
+        </div>
+
+        <!-- Newsletter Signup -->
+        <div class="newsletter">
+          <h4>Subscribe to our Newsletter</h4>
+          <form action="#">
+            <input type="email" placeholder="Enter your email" required />
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+
+        <!-- Legal Information -->
+        <div class="legal-info">
+          <p>
+            <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy</a>
+          </p>
+        </div>
+
+        <!-- Call-to-Action -->
+        <div class="footer-cta">
+          <p>
+            Explore the world of IPOs with PrintMoney – your trusted IPO
+            companion.
+          </p>
+        </div>
       </div>
+    </footer>
 
-      <!-- Contact Information -->
-      <div class="contact-info">
-        <h4>Contact Us</h4>
-        <p>Email: <a href="mailto:support@printmoney.com">support@printmoney.com</a></p>
-        <p>Phone: +1-234-567-890</p>
-      </div>
+    <script>
+      // Fetch and display data from the CSV file automatically
+      fetch("ipo_data.csv") // Path to your CSV file
+        .then((response) => response.text())
+        .then((csvData) => {
+          const data = parseCSV(csvData);
+          populateTable(data);
+        })
+        .catch((error) => console.error("Error loading CSV data:", error));
 
-      <!-- Social Media Links -->
-      <div class="social-links">
-        <h4>Follow Us</h4>
-        <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-        <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
-        <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-      </div>
+      // Function to parse CSV data
+      function parseCSV(csvData) {
+        const rows = csvData.split("\n");
+        const result = [];
 
-      <!-- Newsletter Signup -->
-      <div class="newsletter">
-        <h4>Subscribe to our Newsletter</h4>
-        <form action="#">
-          <input type="email" placeholder="Enter your email" required>
-          <button type="submit">Subscribe</button>
-        </form>
-      </div>
-
-      <!-- Legal Information -->
-      <div class="legal-info">
-        <p><a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy</a></p>
-      </div>
-
-      <!-- Call-to-Action -->
-      <div class="footer-cta">
-        <p>Explore the world of IPOs with PrintMoney – your trusted IPO companion.</p>
-      </div>
-    </div>
-  </footer>
-
-  <script>
-    // Fetch and display data from the CSV file automatically
-    fetch('ipo_data.csv') // Path to your CSV file
-      .then(response => response.text())
-      .then(csvData => {
-        const data = parseCSV(csvData);
-        populateTable(data);
-      })
-      .catch(error => console.error('Error loading CSV data:', error));
-
-    // Function to parse CSV data
-    function parseCSV(csvData) {
-      const rows = csvData.split('\n');
-      const result = [];
-      
-      for (let i = 1; i < rows.length; i++) {  // Skip the header row
-        const cols = rows[i].split(',');
-        if (cols.length > 1) {  // Ensure there is data in the row
-          result.push({
-            "IPO Name": cols[0].trim(),
-            "Status": cols[1].trim(),
-            "Price": cols[2].trim(),
-            "GMP(₹)": cols[3].trim(),
-            "Est Listing": cols[4].trim(),
-            // "Rating": cols[5].trim(),
-            "IPO Size": cols[6].trim(),
-            "Lot Size": cols[7].trim(),
-            "Open Date": cols[8].trim(),
-            "Close Date": cols[9].trim(),
-            "BoA Dt": cols[10].trim(),
-            "Listing": cols[11].trim(),
-            "GMP Updated": cols[12].trim(),
-          });
+        for (let i = 1; i < rows.length; i++) {
+          // Skip the header row
+          const cols = rows[i].split(",");
+          if (cols.length > 1) {
+            // Ensure there is data in the row
+            result.push({
+              "IPO Name": cols[0].trim(),
+              Status: cols[1].trim(),
+              Price: cols[2].trim(),
+              "GMP(₹)": cols[3].trim(),
+              "Est Listing": cols[4].trim(),
+              // "Rating": cols[5].trim(),
+              "IPO Size": cols[6].trim(),
+              "Lot Size": cols[7].trim(),
+              "Open Date": cols[8].trim(),
+              "Close Date": cols[9].trim(),
+              "BoA Dt": cols[10].trim(),
+              Listing: cols[11].trim(),
+              "GMP Updated": cols[12].trim(),
+            });
+          }
         }
+        return result;
       }
-      return result;
-    }
 
-    // Function to populate the table with IPO data
-    function populateTable(data) {
-      const tableBody = document.querySelector('#ipo-table tbody');
-      tableBody.innerHTML = '';  // Clear any existing rows
+      // Function to populate the table with IPO data
+      function populateTable(data) {
+        const tableBody = document.querySelector("#ipo-table tbody");
+        tableBody.innerHTML = ""; // Clear any existing rows
 
-      data.forEach(item => {
-        const row = document.createElement('tr');
-        
-        Object.values(item).forEach(value => {
-          const cell = document.createElement('td');
-          cell.textContent = value;
-          row.appendChild(cell);
+        data.forEach((item) => {
+          const row = document.createElement("tr");
+
+          Object.values(item).forEach((value) => {
+            const cell = document.createElement("td");
+            cell.textContent = value;
+            row.appendChild(cell);
+          });
+
+          tableBody.appendChild(row);
         });
-
-        tableBody.appendChild(row);
-      });
-    }
-  </script>
-
-</body>
+      }
+    </script>
+  </body>
 </html>
