--- a/explore.html
+++ b/explore.html
@@ -22,34 +22,43 @@
       </nav>
     </header>
 
-    <section class="ipo-data">
-      <center><h2>Latest IPO Data</h2></center>
-
+    <section class="ipo-container">
       <!-- Table to display IPO data -->
-      <table id="ipo-table">
-        <thead>
-          <tr>
-            <th>IPO Name</th>
-            <th>Status</th>
-            <th>Price</th>
-            <th>GMP(₹)</th>
-            <th>Est Listing</th>
-            <!-- <th>Rating</th> -->
-            <th>IPO Size</th>
-            <th>Lot Size</th>
-            <th>Open Date</th>
-            <th>Close Date</th>
-            <th> BoA Dt </th>
-            <th>Listing</th>
-            <th>GMP Updated</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- Data will be inserted here dynamically -->
-        </tbody>
-      </table>
+      <section class="ipo-data">
+        <table id="ipo-table">
+          <caption>
+            Latest IPO Data
+          </caption>
+          <thead>
+            <tr>
+              <th>IPO Name</th>
+              <th>Status</th>
+              <th>Price</th>
+              <th>GMP(₹)</th>
+              <th>Est Listing</th>
+              <!-- <th>Rating</th> -->
+              <th>IPO Size</th>
+              <th>Lot Size</th>
+              <th>Open Date</th>
+              <th>Close Date</th>
+              <th>BoA Date</th>
+              <th>Listing</th>
+              <th>GMP Updated</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Data will be inserted here dynamically -->
+          </tbody>
+        </table>
+      </section>
+
+      <!-- New Right Container -->
+      <section class="ipo-details">
+        <!-- Content for the right container goes here -->
+      </section>
     </section>
-    <br><br>
+
+    <br /><br />
 
     <footer>
       <div class="footer-container">
