--- a/explore.html
+++ b/explore.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PrintMoney - IPO Information</title>
-    <link rel="stylesheet" href="styles_explore.css" />
+    <link rel="stylesheet" href="explore.css" />
   </head>
   <body>
     <header>
@@ -25,7 +25,7 @@
     <section class="ipo-container">
       <!-- Table to display IPO data -->
       <section class="ipo-data">
-        <table id="ipo-table">
+        <table id="ipo-table" class="scroll-box">
           <caption>
             Latest IPO Data
           </caption>
