--- a/index.html
+++ b/index.html
@@ -1,101 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PrintMoney - IPO Information</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PrintMoney - IPO Information</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <div class="logo" unselectable="on"><a href="index.html">PrintMoney</a></div>
-            <ul class="nav-links">
-            <li><a href="#">Upcoming IPOs</a></li>
-            <li><a href="#">IPO Calendar</a></li>
-            <li><a href="#">IPO Analysis</a></li>
-            <li><a href="#">Market Trends</a></li>
-            <li><a href="#" class="cta-btn">Get Started</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <div class="logo" unselectable="on">
+          <a href="index.html"><img src="images/logo.jpg" height="70px" /></a>
+        </div>
+        <ul class="nav-links">
+          <!-- <li><a href="#">Upcoming IPOs</a></li>
+          <li><a href="#">IPO Calendar</a></li>
+          <li><a href="#">IPO Analysis</a></li>
+          <li><a href="#">Market Trends</a></li> -->
+          <li><a href="#" class="cta-btn">Sign IN</a></li>
+        </ul>
+      </nav>
     </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1>PrintMoney: Discover. Invest. Prosper.</h1>
-      <p>Get the latest IPO updates. PrintMoney provides real-time data, expert analysis, and insights to guide your investment journey.</p>
-      <a href="explore.html" class="cta-btn">Explore IPOs</a>
-    </div>
-    <div class="illustration">
-      <img src="your-illustration.png" alt="Illustration">
-    </div>
-  </section>
-
-  <section class="features">
-    <div class="feature">
-      <img src="icon1.png" alt="Icon 1">
-      <h3>Real-Time Data</h3>
-      <p>Stay up-to-date with the latest IPOs.</p>
-    </div>
-    <div class="feature">
-      <img src="icon2.png" alt="Icon 2">
-      <h3>Expert Analysis</h3>
-      <p>Access in-depth IPO evaluations.</p>
-    </div>
-    <div class="feature">
-      <img src="icon3.png" alt="Icon 3">
-      <h3>Global Coverage</h3>
-      <p>IPO news from markets across the world.</p>
-    </div>
-  </section>
-
-  <footer>
-    <div class="footer-container">
-      <!-- Quick Links -->
-      <div class="footer-links">
-        <h4>Quick Links</h4>
-        <a href="index.html">Home</a> | 
-        <a href="#">Upcoming IPOs</a> | 
-        <a href="#">IPO Calendar</a> | 
-        <a href="#">Contact Us</a> | 
-        <a href="#">About Us</a>
+    <section class="hero">
+      <div class="hero-content">
+        <h1>Discover. Invest. Thrive.</h1>
+        <p>
+          Stay ahead with PrintMoney – your ultimate destination for the latest
+          IPO updates. Experience real-time data, expert analysis, and profound
+          insights to steer your investment journey towards success.
+        </p>
+        <a href="explore.html" class="cta-btn">Explore IPOs</a>
       </div>
-
-      <!-- Contact Information -->
-      <div class="contact-info">
-        <h4>Contact Us</h4>
-        <p>Email: <a href="mailto:support@printmoney.com">support@printmoney.com</a></p>
-        <p>Phone: +1-234-567-890</p>
+      <div class="illustration">
+        <img src="images/maninframe2.jpg" alt="Illustration" />
       </div>
+    </section>
 
-      <!-- Social Media Links -->
-      <div class="social-links">
-        <h4>Follow Us</h4>
-        <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-        <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
-        <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+    <section class="features">
+      <div class="feature">
+        <img src="images/icon1.png" alt="Icon 1" />
+        <h3>Real-Time Data</h3>
+        <p>Stay up-to-date with the latest IPOs.</p>
       </div>
-
-      <!-- Newsletter Signup -->
-      <div class="newsletter">
-        <h4>Subscribe to our Newsletter</h4>
-        <form action="#">
-          <input type="email" placeholder="Enter your email" required>
-          <button type="submit">Subscribe</button>
-        </form>
+      <div class="feature">
+        <img src="images/icon2.png" alt="Icon 2" />
+        <h3>Expert Analysis</h3>
+        <p>Access in-depth IPO evaluations.</p>
       </div>
-
-      <!-- Legal Information -->
-      <div class="legal-info">
-        <p><a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy</a></p>
+      <div class="feature">
+        <img src="images/icon3.png" alt="Icon 3" />
+        <h3>Global Coverage</h3>
+        <p>IPO news from markets across the world.</p>
       </div>
+    </section>
 
-      <!-- Call-to-Action -->
-      <div class="footer-cta">
-        <p>Explore the world of IPOs with PrintMoney – your trusted IPO companion.</p>
+    <footer>
+      <div class="footer-container">
+        <!-- Contact Information -->
+        <div class="contact-info">
+          <h4>Contact Us</h4>
+          <p>
+            Email:
+            <a href="mailto:support@printmoney.com">support@printmoney.com</a>
+          </p>
+          <p>Phone: +1-234-567-890</p>
+        </div>
+
+        <!-- Social Media Links -->
+        <div class="social-links">
+          <h4>Follow Us</h4>
+          <a href="#"><img src="images/x-icon.png" alt="X" /></a>
+          <a href="#"><img src="images/linkedin-icon.png" alt="LinkedIn" /></a>
+          <a href="#"><img src="images/instagram-icon.png" alt="Instagram" /></a>
+        </div>
+
+        <!-- Newsletter Signup -->
+        <div class="newsletter">
+          <h4>Subscribe to our Newsletter</h4>
+          <form action="#">
+            <input type="email" placeholder="Enter your email" required />
+            <br />
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
       </div>
-    </div>
-  </footer>
+      <section class="end">
+        <!-- Legal Information -->
+        <div class="legal-info">
+          <p>
+            <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy</a>
+          </p>
+        </div>
 
-</body>
+        <!-- Call-to-Action -->
+        <div class="footer-cta">
+          <p>
+            Explore the world of IPOs with PrintMoney – your trusted IPO
+            companion.
+          </p>
+        </div>
+      </section>
+    </footer>
+  </body>
 </html>
